// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render more than two buttons 1`] = `
<div>
  <button
    class="button icon button"
    type="button"
  >
    <span
      class="text"
    >
      <span
        aria-label="su-th-large"
        class="su-th-large"
      />
    </span>
  </button>
  <button
    class="button icon button"
    type="button"
  >
    <span
      class="text"
    >
      <span
        aria-label="su-align-justify"
        class="su-align-justify"
      />
    </span>
  </button>
  <button
    class="button icon button"
    type="button"
  >
    <span
      class="text"
    >
      <span
        aria-label="su-th-large"
        class="su-th-large"
      />
    </span>
  </button>
  <button
    class="button icon button"
    type="button"
  >
    <span
      class="text"
    >
      <span
        aria-label="su-align-justify"
        class="su-align-justify"
      />
    </span>
  </button>
</div>
`;

exports[`Should render one button 1`] = `
<div>
  <button
    class="button icon button"
    type="button"
  >
    <span
      class="text"
    >
      <span
        aria-label="su-th-large"
        class="su-th-large"
      />
    </span>
  </button>
</div>
`;

exports[`Should render two buttons 1`] = `
<div>
  <button
    class="button icon button"
    type="button"
  >
    <span
      class="text"
    >
      <span
        aria-label="su-th-large"
        class="su-th-large"
      />
    </span>
  </button>
  <button
    class="button icon button"
    type="button"
  >
    <span
      class="text"
    >
      <span
        aria-label="su-align-justify"
        class="su-align-justify"
      />
    </span>
  </button>
</div>
`;
